Tweak position of taskforce report image on mobile to prevent overlap with text

--- a/_includes/assets/postcss/styles.css
+++ b/_includes/assets/postcss/styles.css
@@ -225,7 +225,7 @@ button {
 			grid-column-start: 3;
 			grid-column-end: span 2;
 			position: relative;
-			left: 50%;
+			left: 55%;
 		}	
 	}
 }
